--- a/login.html
+++ b/login.html
@@ -1,25 +1,79 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
+
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>登入 - 毛孩到府服務平台</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/login.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="./js/navbar-loader.js"></script>
 </head>
+
 <body>
-  <h1 style="text-align: center">毛孩到府服務平台</h1>
-  
-  <div style="max-width: 400px; margin: 40px auto; padding: 20px;">
-    <h2 style="text-align: center">登入</h2>
-    <div id="error-message" style="display: none; color: red; text-align: center; margin-bottom: 15px;"></div>
-    <form id="login-form" style="display: flex; flex-direction: column; gap: 15px;" onsubmit="return handleLogin(event)">
-      <input type="email" placeholder="電子郵件" required style="padding: 10px;">
-      <input type="password" placeholder="密碼" required style="padding: 10px;">
-      <button type="submit" style="padding: 10px; background-color: #4a90e2; color: white; border: none; cursor: pointer;">登入</button>
-    </form>
-    <p style="text-align: center; margin-top: 20px;">
-      還沒有帳號？<a href="register.html">立即註冊</a>
-    </p>
+  <!-- 導覽列 -->
+  <div id="navbar-placeholder"></div>
+
+  <!-- 標題區 -->
+  <div class="hero">
+    <h1>毛孩到府服務平台</h1>
+    <p>登入你的帳號，開始預約服務</p>
   </div>
+
+  <!-- 登入表單 -->
+  <div class="card">
+    <h2 class="text-center">登入</h2>
+    <div id="error-message" style="display: none; color: red; text-align: center; margin-bottom: 10px"></div>
+    <form id="login-form">
+      <input id="email" type="email" placeholder="電子郵件" required />
+      <input id="password" type="password" placeholder="密碼" required />
+      <button type="submit">登入</button>
+    </form>
+    <div class="links">
+      還沒有帳號？<a href="register.html">立即註冊</a><br />
+      忘記密碼？<a href="forgot-password.html">重設密碼</a>
+    </div>
+  </div>
+ <footer>
+    <p>
+      © 2025 毛孩到府服務平台 | 保留所有權利
+    </p>
+  </footer>
+  <!-- 登入邏輯 -->
+  <script>
+    const {createClient} = supabase;
+    const supabaseClient = createClient(
+      "https://cbmimzpytdmtjvanvaoh.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNibWltenB5dGRtdGp2YW52YW9oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDg0MjE2MzUsImV4cCI6MjA2Mzk5NzYzNX0.YHon747wNSjx6-ZcG-344tlKXtKqXxl-VYu1Vtbusgo"
+    );
+
+    document.getElementById("login-form").addEventListener("submit", async function (event) {
+      event.preventDefault();
+
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      const errorMessage = document.getElementById("error-message");
+
+      const {data, error} = await supabaseClient.auth.signInWithPassword({
+        email,
+        password,
+      });
+
+      if (error) {
+        errorMessage.textContent = error.message.includes("Email not confirmed")
+          ? "請先驗證電子郵件，然後再登入。"
+          : "登入失敗：" + error.message;
+        errorMessage.style.display = "block";
+      } else {
+        errorMessage.style.display = "none";
+        alert("登入成功！");
+        window.location.href = "index.html";
+      }
+    });
+  </script>
 </body>
+
 </html>
