--- a/booking.html
+++ b/booking.html
@@ -12,17 +12,18 @@
 
   <!-- 載入 supabase-js -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <!-- 載入 navbar-loader.js (請確保這個檔案內有動態載入 navbar 並初始化 supabase 的程式碼) -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- 載入 navbar-loader.js (動態載入 navbar 並初始化 supabase) -->
   <script src="./js/navbar-loader.js"></script>
 </head>
 
 <body>
-  <!-- 導覽列容器，和主頁、加入我們一樣 -->
+  <!-- 導覽列容器 -->
   <div id="navbar-placeholder"></div>
 
   <!-- 標題區塊 -->
-  <div class="blue-banner mt-5">
+  <div class="blue-banner mymargin-1">
     <h1>預定服務者</h1>
     <p>選擇適合你的服務者並預約時間</p>
   </div>
@@ -43,12 +44,13 @@
         <option value="阿宏司機">阿宏司機</option>
       </select>
     </div>
+
     <!-- 顯示服務者資訊 -->
-    <div id="provider-info" class="info-section">
+    <div id="provider-info" class="info-section" style="display:none;">
       <img id="provider-img" src="" alt="服務者照片" />
       <div>
         <h2 id="provider-name"></h2>
-        <p id="provider-rating"></p>
+        <p id="provider-rating">讀取中...</p>
         <p id="provider-specialty"></p>
       </div>
     </div>
@@ -78,68 +80,98 @@
 
       <button type="submit">提交預約</button>
     </form>
+    <div class="text-center">
+      <a href="reviews.html">
+        <button class="btn btn-primary ">評價服務者</button>
+      </a>
+    </div>
   </div>
+
   <footer>
-    <p>
-      © 2025 毛孩到府服務平台 | 保留所有權利
-    </p>
+    <p>© 2025 毛孩到府服務平台 | 保留所有權利</p>
   </footer>
 
-  <!-- 頁尾 -->
+  <!-- JS -->
   <script>
     const providerData = {
       "小雪美容師": {
         img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        rating: "⭐⭐⭐⭐☆ (98 評價)",
         specialty: "專長：洗澡美容、寵物接送"
       },
       "麗娜美容師": {
         img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        rating: "⭐⭐⭐⭐⭐ (185 評價)",
         specialty: "專長：洗澡美容"
       },
       "小華老師": {
         img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        rating: "⭐⭐⭐⭐⭐ (305 評價)",
         specialty: "專長：行為訓練、寵物接送"
       },
       "阿偉老師": {
         img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        rating: "⭐⭐⭐⭐⭐ (320 評價)",
         specialty: "專長：行為訓練"
       },
       "阿傑照護師": {
         img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        rating: "⭐⭐⭐⭐⭐ (234 評價)",
         specialty: "專長：老年寵物照護、到府照護"
       },
       "小美老師": {
         img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        rating: "⭐⭐⭐⭐☆ (128 評價)",
         specialty: "專長：到府照護、行為訓練"
       },
       "阿宏司機": {
         img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        rating: "⭐⭐⭐⭐☆ (76 評價)",
         specialty: "專長：寵物接送"
       }
     };
 
-    document.getElementById('provider-select').addEventListener('change', function () {
-      const selected = this.value;
-      const info = providerData[selected];
-      if (info) {
-        document.getElementById('provider-info').style.display = 'flex';
-        document.getElementById('provider-img').src = info.img;
-        document.getElementById('provider-name').textContent = selected;
-        document.getElementById('provider-rating').textContent = info.rating;
-        document.getElementById('provider-specialty').textContent = info.specialty;
-      } else {
-        document.getElementById('provider-info').style.display = 'none';
-      }
+    // 等 navbar 載入完成 + supabaseClient 初始化後
+    document.addEventListener("navbarLoaded", () => {
+      const providerSelect = document.getElementById('provider-select');
+
+      providerSelect.addEventListener('change', async function () {
+        const selected = this.value;
+        const info = providerData[selected];
+
+        if (info) {
+          document.getElementById('provider-info').style.display = 'flex';
+          document.getElementById('provider-img').src = info.img;
+          document.getElementById('provider-name').textContent = selected;
+          document.getElementById('provider-specialty').textContent = info.specialty;
+
+          // 讀取評價
+          await loadRating(selected);
+        } else {
+          document.getElementById('provider-info').style.display = 'none';
+        }
+      });
     });
 
-    // 表單送出示範（可依需求改成向 supabase 或後端送出）
+    async function loadRating(providerName) {
+      if (!window.supabaseClient) return;
+
+      const ratingEl = document.getElementById('provider-rating');
+
+      const { data, error } = await window.supabaseClient
+        .from("reviews")
+        .select("rating")
+        .eq("provider_name", providerName);
+
+      if (error) {
+        ratingEl.textContent = "⚠️ 無法讀取評價";
+        return;
+      }
+
+      if (!data || data.length === 0) {
+        ratingEl.textContent = "尚無評價";
+        return;
+      }
+
+      const avg = data.reduce((acc, r) => acc + r.rating, 0) / data.length;
+      const stars = "⭐".repeat(Math.round(avg)) + "☆".repeat(5 - Math.round(avg));
+      ratingEl.textContent = `${stars} (${data.length} 評價)`;
+    }
+
+    // 表單送出（示範）
     document.getElementById('booking-form').addEventListener('submit', function (e) {
       e.preventDefault();
       alert("預約已提交，我們會儘快聯絡您！");
@@ -149,5 +181,4 @@
   </script>
 
 </body>
-
 </html>
