--- a/forgot-password.html
+++ b/forgot-password.html
@@ -9,17 +9,21 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <!-- 載入 navbar 並初始化 supabaseClient -->
   <script src="./js/navbar-loader.js"></script>
 </head>
+
 <style>
   html,
   body {
     height: calc(100% - 56px);
   }
-  main{
-    padding:10rem;
+
+  main {
+    padding: 10rem;
   }
-  .myform{
+
+  .myform {
     width: 60%;
   }
 </style>
@@ -38,43 +42,55 @@
       </form>
     </div>
   </main>
+
   <footer class="fixed-bottom">
-    <p>
-      © 2025 毛孩到府服務平台 | 保留所有權利
-    </p>
+    <p>© 2025 毛孩到府服務平台 | 保留所有權利</p>
   </footer>
+<script>
+document.addEventListener("navbarLoaded", () => {
+  if (!window.supabaseClient) return;
 
-  <script>
-    const supabase = supabase.createClient(
-      "https://cbmimzpytdmtjvanvaoh.supabase.co",
-      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNibWltenB5dGRtdGp2YW52YW9oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDg0MjE2MzUsImV4cCI6MjA2Mzk5NzYzNX0.YHon747wNSjx6-ZcG-344tlKXtKqXxl-VYu1Vtbusgo", // ← 請替換成你的 Supabase public anon key
-    );
+  const forgotForm = document.getElementById("forgot-form");
+  const emailInput = document.getElementById("email");
+  const messageDiv = document.getElementById("message");
+  const submitBtn = forgotForm.querySelector("button");
 
-    document
-      .getElementById("forgot-form")
-      .addEventListener("submit", async function (event) {
-        event.preventDefault();
+  forgotForm.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    messageDiv.textContent = "";
 
-        const email = document.getElementById("email").value;
-        const messageBox = document.getElementById("message");
+    const email = emailInput.value.trim();
+    if (!email) {
+      messageDiv.innerHTML = `<span class="text-danger">❌ 請輸入電子郵件</span>`;
+      return;
+    }
 
-        const { data, error } = await supabase.auth.resetPasswordForEmail(
-          email,
-          {
-            redirectTo: "http://localhost:3000/reset-password.html", // ← 使用者點 Email 後跳轉頁面
-          },
-        );
+    // 禁用按鈕，避免連續點擊
+    submitBtn.disabled = true;
 
-        if (error) {
-          messageBox.textContent = "錯誤：" + error.message;
-          messageBox.style.color = "red";
-        } else {
-          messageBox.textContent = "重設密碼連結已寄送至您的信箱！";
-          messageBox.style.color = "green";
-        }
-        messageBox.style.display = "block";
+    try {
+      const { data, error } = await window.supabaseClient.auth.resetPasswordForEmail(email, {
+        redirectTo: window.location.origin + "/reset-password.html"
       });
-  </script>
+
+      if (error) {
+        // 判斷是否為短時間內重複請求
+        if (error.message.includes("For security purposes")) {
+          messageDiv.innerHTML = `<span class="text-danger">❌ 請稍候再重試，避免重複請求</span>`;
+        } else {
+          messageDiv.innerHTML = `<span class="text-danger">❌ ${error.message}</span>`;
+        }
+      } else {
+        messageDiv.innerHTML = `<span class="text-success">✅ 重設密碼郵件已送出，請檢查信箱</span>`;
+        forgotForm.reset();
+      }
+    } finally {
+      // 4 秒後再啟用按鈕
+      setTimeout(() => submitBtn.disabled = false, 10000);
+    }
+  });
+});
+</script>
 </body>
 
 </html>
