--- a/navbar.html
+++ b/navbar.html
@@ -32,7 +32,7 @@
           <a class="nav-link text-dark" href="booking.html">服務項目</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark" href="reviews.html">服務者評價</a>
+          <a class="nav-link text-dark" href="shop.html">商城</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-dark" href="join_us.html">加入我們</a>
