--- a/reset-password.html
+++ b/reset-password.html
@@ -1,75 +1,87 @@
 <!doctype html>
 <html lang="zh-Hant">
-  <head>
-    <meta charset="UTF-8" />
-    <title>重設密碼 - 毛孩到府服務平台</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    
-  </head>
-  <body>
-    <h1 style="text-align: center; margin-top: 50px">重設密碼</h1>
-    <div style="max-width: 400px; margin: 40px auto; padding: 20px">
-      <form
-        id="reset-form"
-        style="display: flex; flex-direction: column; gap: 15px"
-      >
-        <input
-          id="new-password"
-          type="password"
-          placeholder="輸入新密碼"
-          required
-          style="padding: 10px"
-        />
-        <button
-          type="submit"
-          style="
-            padding: 10px;
-            background-color: #4a90e2;
-            color: white;
-            border: none;
-            cursor: pointer;
-          "
-        >
-          重設密碼
-        </button>
+<head>
+  <meta charset="UTF-8" />
+  <title>重設密碼 - 毛孩到府服務平台</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="./js/navbar-loader.js"></script>
+</head>
+<body>
+  <nav id="navbar-placeholder"></nav>
+
+  <main class="container d-flex flex-column align-items-center" style="padding: 5rem 1rem;">
+    <h1 class="mb-4 text-center">重設密碼</h1>
+    <div class="w-100" style="max-width: 400px;">
+      <form id="reset-form" class="d-flex flex-column gap-3">
+        <input type="password" id="new-password" class="form-control" placeholder="輸入新密碼" required>
+        <button type="submit" class="btn btn-primary">重設密碼</button>
       </form>
-      <div
-        id="message"
-        style="margin-top: 20px; text-align: center; color: red"
-      ></div>
+      <div id="message" class="text-center mt-3"></div>
     </div>
+  </main>
 
-    <script>
-      const supabase = supabase.createClient(
-        "https://cbmimzpytdmtjvanvaoh.supabase.co",
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNibWltenB5dGRtdGp2YW52YW9oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDg0MjE2MzUsImV4cCI6MjA2Mzk5NzYzNX0.YHon747wNSjx6-ZcG-344tlKXtKqXxl-VYu1Vtbusgo", // ← 請替換為你自己的 anon 公鑰
-      );
+  <footer class="text-center py-3 bg-light">
+    © 2025 毛孩到府服務平台 | 保留所有權利
+  </footer>
 
-      const form = document.getElementById("reset-form");
-      const message = document.getElementById("message");
+  <script>
+document.addEventListener("navbarLoaded", () => {
+  if (!window.supabaseClient) {
+    console.error("supabaseClient 尚未初始化");
+    return;
+  }
 
-      form.addEventListener("submit", async function (event) {
-        event.preventDefault();
-        const newPassword = document.getElementById("new-password").value;
+  const form = document.getElementById("reset-form");
+  const message = document.getElementById("message");
 
-        const { data, error } = await supabase.auth.updateUser({
-          password: newPassword,
-        });
+  form.addEventListener("submit", async (event) => {
+    event.preventDefault();
+    message.textContent = "";
+    message.className = "text-center mt-3";
 
-        if (error) {
-          message.textContent = "重設失敗：" + error.message;
-        } else {
-          message.style.color = "green";
-          message.textContent = "密碼已成功更新！即將導向登入頁面...";
-          setTimeout(() => {
-            window.location.href = "login.html";
-          }, 2000);
-        }
+    const newPassword = document.getElementById("new-password").value.trim();
+    if (!newPassword) {
+      message.textContent = "❌ 請輸入新密碼！";
+      message.classList.add("text-danger");
+      return;
+    }
+
+    try {
+      const { data, error } = await window.supabaseClient.auth.updateUser({
+        password: newPassword,
       });
-    </script>
-  </body>
+
+      if (error) {
+        // 自訂各種常見錯誤訊息
+        if (error.message.includes("New password should be different")) {
+          message.textContent = "❌ 新密碼不能與舊密碼相同！請輸入新的密碼";
+        } else if (error.message.includes("Auth session missing")) {
+          message.textContent = "❌ 重設密碼連結已失效，請重新申請重設郵件。";
+        } else if (error.message.includes("Password should contain at least one character")) {
+          message.textContent = "❌ 密碼需包含至少一個字母及一個數字，請重新輸入";
+        } else {
+          message.textContent = "❌ 重設失敗：" + error.message;
+        }
+        message.classList.add("text-danger");
+      } else {
+        message.textContent = "✅ 密碼已成功更新！即將導向登入頁面...";
+        message.classList.add("text-success");
+        setTimeout(() => {
+          window.location.href = "login.html";
+        }, 2000);
+      }
+    } catch (err) {
+      message.textContent = "❌ 系統錯誤：" + err.message;
+      message.classList.add("text-danger");
+      console.error(err);
+    }
+  });
+});
+</script>
+
+</body>
 </html>
