--- a/join_us.html
+++ b/join_us.html
@@ -8,13 +8,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/join_us.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="./js/navbar-loader.js"></script>
-  
 </head>
-
-
 <body>
   <!-- ✅ 導覽列區塊（將由 navbar-loader.js 動態載入） -->
   <div id="navbar-placeholder"></div>
@@ -71,13 +65,13 @@
       </section>
     </main>
   </div>
-
   <!-- ✅ 頁尾 -->
   <footer>
-    © 2025 毛孩到府服務平台 | 保留所有權利
+    <p>© 2025 毛孩到府服務平台 | 保留所有權利</p>
   </footer>
-
-  <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="./js/sweetalert-replacer.js"></script>
+  <script src="./js/navbar-loader.js"></script>
 </body>
-
 </html>
