--- a/navbar.html
+++ b/navbar.html
@@ -32,6 +32,9 @@
           <a class="nav-link text-dark" href="booking.html">服務項目</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link text-dark" href="reviews.html">評價系統</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-dark" href="shop.html">商城</a>
         </li>
         <li class="nav-item">
