--- a/booking.html
+++ b/booking.html
@@ -2,183 +2,70 @@
 <html lang="zh-Hant">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>預定服務者｜毛孩到府服務平台</title>
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/booking.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-
-  <!-- 載入 supabase-js -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- 載入 navbar-loader.js (動態載入 navbar 並初始化 supabase) -->
-  <script src="./js/navbar-loader.js"></script>
 </head>
 
-<body>
-  <!-- 導覽列容器 -->
-  <div id="navbar-placeholder"></div>
+  <body>
+    <div id="navbar-placeholder"></div>
+    <div class="container">
+      
+      <h2 class="mb-3">預定服務者</h2>
 
-  <!-- 標題區塊 -->
-  <div class="blue-banner mymargin-1">
-    <h1>預定服務者</h1>
-    <p>選擇適合你的服務者並預約時間</p>
-  </div>
-
-  <div class="main-container">
-
-    <!-- 選擇服務者 -->
-    <div class="form-section">
+      <!-- 選服務者 -->
       <label for="provider-select">選擇服務者：</label>
-      <select id="provider-select">
-        <option value="">請選擇</option>
-        <option value="小雪美容師">小雪美容師</option>
-        <option value="麗娜美容師">麗娜美容師</option>
-        <option value="小華老師">小華老師</option>
-        <option value="阿偉老師">阿偉老師</option>
-        <option value="阿傑照護師">阿傑照護師</option>
-        <option value="小美老師">小美老師</option>
-        <option value="阿宏司機">阿宏司機</option>
+      <select id="provider-select" class="form-select mb-3">
+        <option value="" disabled selected>讀取中...</option>
       </select>
-    </div>
 
-    <!-- 顯示服務者資訊 -->
-    <div id="provider-info" class="info-section" style="display:none;">
-      <img id="provider-img" src="" alt="服務者照片" />
-      <div>
-        <h2 id="provider-name"></h2>
-        <p id="provider-rating">讀取中...</p>
-        <p id="provider-specialty"></p>
+      <!-- 服務者資訊 -->
+      <div id="provider-info" class="info-section" style="display:none;">
+        <img id="provider-img" src="" alt="服務者照片" />
+        <div>
+          <h4 id="provider-name"></h4>
+          <p id="provider-specialty"></p>
+          <p id="provider-rating"></p>
+        </div>
       </div>
-    </div>
 
-    <!-- 預約表單 -->
-    <form class="form-section" id="booking-form">
-      <label for="owner-name">飼主姓名：</label>
-      <input type="text" id="owner-name" required />
-
-      <label for="pet-name">毛孩姓名：</label>
-      <input type="text" id="pet-name" required />
-
+      <!-- 選服務類型 -->
       <label for="service-type">選擇服務類型：</label>
-      <select id="service-type" required>
-        <option value="">請選擇</option>
-        <option value="洗澡美容">洗澡美容</option>
-        <option value="行為訓練">行為訓練</option>
-        <option value="到府照護">到府照護</option>
-        <option value="寵物接送">寵物接送</option>
+      <select id="service-type" class="form-select mb-3">
+        <option value="" disabled selected>請選擇</option>
+      </select>
+      <p class="price-display" id="price-display">價格：- 元</p>
+
+      <!-- 選日期 -->
+      <label for="date">選擇日期：</label>
+      <input type="date" id="date" class="form-control mb-3" />
+
+      <!-- 選時間 -->
+      <label for="time">選擇時間：</label>
+      <select id="time" class="form-select mb-3">
+        <option value="" disabled selected>請選擇時間</option>
       </select>
 
-      <label for="date">選擇日期：</label>
-      <input type="date" id="date" required />
+      <!-- 飼主與毛孩 -->
+      <label for="owner-name">飼主姓名：</label>
+      <input type="text" id="owner-name" class="form-control mb-3" required />
+      <label for="pet-name">毛孩姓名：</label>
+      <input type="text" id="pet-name" class="form-control mb-3" required />
 
-      <label for="time">選擇時間：</label>
-      <input type="time" id="time" required />
-
-      <button type="submit">提交預約</button>
-    </form>
-    <div class="text-center">
-      <a href="reviews.html">
-        <button class="btn btn-primary ">評價服務者</button>
-      </a>
+      <button id="submit-btn" class="btn btn-primary w-100">提交預約</button>
     </div>
-  </div>
 
   <footer>
     <p>© 2025 毛孩到府服務平台 | 保留所有權利</p>
   </footer>
 
-  <!-- JS -->
-  <script>
-    const providerData = {
-      "小雪美容師": {
-        img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        specialty: "專長：洗澡美容、寵物接送"
-      },
-      "麗娜美容師": {
-        img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        specialty: "專長：洗澡美容"
-      },
-      "小華老師": {
-        img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        specialty: "專長：行為訓練、寵物接送"
-      },
-      "阿偉老師": {
-        img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        specialty: "專長：行為訓練"
-      },
-      "阿傑照護師": {
-        img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        specialty: "專長：老年寵物照護、到府照護"
-      },
-      "小美老師": {
-        img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        specialty: "專長：到府照護、行為訓練"
-      },
-      "阿宏司機": {
-        img: "attached_assets/istockphoto-1214428300-170667a.jpg",
-        specialty: "專長：寵物接送"
-      }
-    };
-
-    // 等 navbar 載入完成 + supabaseClient 初始化後
-    document.addEventListener("navbarLoaded", () => {
-      const providerSelect = document.getElementById('provider-select');
-
-      providerSelect.addEventListener('change', async function () {
-        const selected = this.value;
-        const info = providerData[selected];
-
-        if (info) {
-          document.getElementById('provider-info').style.display = 'flex';
-          document.getElementById('provider-img').src = info.img;
-          document.getElementById('provider-name').textContent = selected;
-          document.getElementById('provider-specialty').textContent = info.specialty;
-
-          // 讀取評價
-          await loadRating(selected);
-        } else {
-          document.getElementById('provider-info').style.display = 'none';
-        }
-      });
-    });
-
-    async function loadRating(providerName) {
-      if (!window.supabaseClient) return;
-
-      const ratingEl = document.getElementById('provider-rating');
-
-      const { data, error } = await window.supabaseClient
-        .from("reviews")
-        .select("rating")
-        .eq("provider_name", providerName);
-
-      if (error) {
-        ratingEl.textContent = "⚠️ 無法讀取評價";
-        return;
-      }
-
-      if (!data || data.length === 0) {
-        ratingEl.textContent = "尚無評價";
-        return;
-      }
-
-      const avg = data.reduce((acc, r) => acc + r.rating, 0) / data.length;
-      const stars = "⭐".repeat(Math.round(avg)) + "☆".repeat(5 - Math.round(avg));
-      ratingEl.textContent = `${stars} (${data.length} 評價)`;
-    }
-
-    // 表單送出（示範）
-    document.getElementById('booking-form').addEventListener('submit', function (e) {
-      e.preventDefault();
-      alert("預約已提交，我們會儘快聯絡您！");
-      this.reset();
-      document.getElementById('provider-info').style.display = 'none';
-    });
-  </script>
-
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./js/navbar-loader.js"></script>
+  <script src="./js/sweetalert-replacer.js"></script>
+  <script src="./js/booking.js"></script>
 </body>
 </html>
