--- a/forgot-password.html
+++ b/forgot-password.html
@@ -7,30 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <!-- 載入 navbar 並初始化 supabaseClient -->
-  <script src="./js/navbar-loader.js"></script>
+  <link rel="stylesheet" href="./css/forgot-password.css">
 </head>
-
-<style>
-  html,
-  body {
-    height: calc(100% - 56px);
-  }
-
-  main {
-    padding: 10rem;
-  }
-
-  .myform {
-    width: 60%;
-  }
-</style>
-
 <body>
   <nav id="navbar-placeholder"></nav>
-  <main>
+  <main class="d-flex justify-content-center flex-column">
+    <div>
     <h1 class="text-center mymargin-1">忘記密碼</h1>
     <div class="d-flex justify-content-center align-items-center flex-column">
       <div id="message" class="text-center"></div>
@@ -41,56 +23,18 @@
         </button>
       </form>
     </div>
+  </div>
   </main>
 
   <footer class="fixed-bottom">
     <p>© 2025 毛孩到府服務平台 | 保留所有權利</p>
   </footer>
-<script>
-document.addEventListener("navbarLoaded", () => {
-  if (!window.supabaseClient) return;
-
-  const forgotForm = document.getElementById("forgot-form");
-  const emailInput = document.getElementById("email");
-  const messageDiv = document.getElementById("message");
-  const submitBtn = forgotForm.querySelector("button");
-
-  forgotForm.addEventListener("submit", async (e) => {
-    e.preventDefault();
-    messageDiv.textContent = "";
-
-    const email = emailInput.value.trim();
-    if (!email) {
-      messageDiv.innerHTML = `<span class="text-danger">❌ 請輸入電子郵件</span>`;
-      return;
-    }
-
-    // 禁用按鈕，避免連續點擊
-    submitBtn.disabled = true;
-
-    try {
-      const { data, error } = await window.supabaseClient.auth.resetPasswordForEmail(email, {
-        redirectTo: window.location.origin + "/reset-password.html"
-      });
-
-      if (error) {
-        // 判斷是否為短時間內重複請求
-        if (error.message.includes("For security purposes")) {
-          messageDiv.innerHTML = `<span class="text-danger">❌ 請稍候再重試，避免重複請求</span>`;
-        } else {
-          messageDiv.innerHTML = `<span class="text-danger">❌ ${error.message}</span>`;
-        }
-      } else {
-        messageDiv.innerHTML = `<span class="text-success">✅ 重設密碼郵件已送出，請檢查信箱</span>`;
-        forgotForm.reset();
-      }
-    } finally {
-      // 4 秒後再啟用按鈕
-      setTimeout(() => submitBtn.disabled = false, 10000);
-    }
-  });
-});
-</script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <!-- 載入 navbar 並初始化 supabaseClient -->
+  <script src="./js/navbar-loader.js"></script>
+  <script src="./js/sweetalert-replacer.js"></script>
+  <script src="./js/forgot-password.js"></script>
 </body>
 
 </html>
