--- a/login.html
+++ b/login.html
@@ -8,9 +8,6 @@
   <link rel="stylesheet" href="./css/login.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="./js/navbar-loader.js"></script>
 </head>
 
 <body>
@@ -18,70 +15,38 @@
   <div id="navbar-placeholder"></div>
 
   <!-- 標題區 -->
-  <div class="hero">
-    <h1>毛孩到府服務平台</h1>
-    <p>登入你的帳號，開始預約服務</p>
-  </div>
+  <main>
+    <section class="hero">
+      <h1>毛孩到府服務平台</h1>
+      <p>登入你的帳號，開始預約服務</p>
+    </section>
 
-  <!-- 登入表單 -->
-  <div class="card">
-    <h2 class="text-center">登入</h2>
-    <div id="error-message" style="display: none; color: red; text-align: center; margin-bottom: 10px"></div>
-    <form id="login-form">
-      <input id="email" type="email" placeholder="電子郵件" required />
-      <input id="password" type="password" placeholder="密碼" required />
-      <button type="submit">登入</button>
-    </form>
-    <div class="links">
-      還沒有帳號？<a href="register.html">立即註冊</a><br />
-      忘記密碼？<a href="forgot-password.html">重設密碼</a>
-    </div>
-  </div>
+    <!-- 登入表單 -->
+    <section class="login-card card">
+      <h2 class="text-center">登入</h2>
+      <div id="error-message" class="text-center text-danger mb-2" style="display: none;"></div>
+      <form id="login-form">
+        <input id="email" type="email" placeholder="電子郵件" required />
+        <input id="password" type="password" placeholder="密碼" required />
+        <button type="submit">登入</button>
+      </form>
+      <div class="links">
+        還沒有帳號？<a href="register.html">立即註冊</a><br />
+        忘記密碼？<a href="forgot-password.html">重設密碼</a>
+      </div>
+    </section>
+  </main>
+
   <footer>
-    <p>
-      © 2025 毛孩到府服務平台 | 保留所有權利
-    </p>
+    <p>© 2025 毛孩到府服務平台 | 保留所有權利</p>
   </footer>
-  <!-- 登入邏輯 -->
- <script>
-  const { createClient } = supabase;
-  const supabaseClient = createClient(
-    "https://cbmimzpytdmtjvanvaoh.supabase.co",
-    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNibWltenB5dGRtdGp2YW52YW9oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDg0MjE2MzUsImV4cCI6MjA2Mzk5NzYzNX0.YHon747wNSjx6-ZcG-344tlKXtKqXxl-VYu1Vtbusgo"
-  );
 
-  const loginForm = document.getElementById("login-form");
-  const errorMessage = document.getElementById("error-message");
-
-  loginForm.addEventListener("submit", async function(event) {
-    event.preventDefault();
-
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
-
-    const { data, error } = await supabaseClient.auth.signInWithPassword({
-      email,
-      password,
-    });
-
-    if (error) {
-      if (error.message.includes("Invalid login credentials")) {
-        errorMessage.textContent = "❌ 帳號或密碼錯誤，請重新輸入";
-      } else if (error.message.includes("Email not confirmed")) {
-        errorMessage.textContent = "❌ 請先驗證電子郵件，然後再登入";
-      } else {
-        errorMessage.textContent = "❌ 登入失敗：" + error.message;
-      }
-      errorMessage.style.display = "block";
-    } else {
-      // 登入成功 → 跳轉首頁
-      errorMessage.style.display = "none";
-      alert("✅ 登入成功！");
-      window.location.href = "index.html";
-    }
-  });
-</script>
-
+  <!-- JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="./js/navbar-loader.js"></script>
+  <script src="./js/sweetalert-replacer.js"></script>
+  <script src="./js/login.js"></script>
 </body>
 
 </html>
