--- a/member.html
+++ b/member.html
@@ -6,111 +6,119 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>會員中心｜毛孩到府服務平台</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/member.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <!-- 載入 navbar-loader.js -->
-  <script src="./js/navbar-loader.js" defer></script>
-
-  <style>
-    body {
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f7fa;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 100px auto;
-      background-color: white;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-
-    h1 {
-      background-color: #007BFF;
-      color: white;
-      padding: 20px;
-      border-radius: 16px;
-      text-align: center;
-      font-size: 2em;
-    }
-
-    .profile-info {
-      margin-top: 30px;
-    }
-
-    .profile-info p {
-      font-size: 1.2em;
-      margin: 10px 0;
-    }
-
-    .logout-btn {
-      margin-top: 30px;
-      display: inline-block;
-      background-color: #dc3545;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 10px;
-      font-size: 1em;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .logout-btn:hover {
-      background-color: #b02a37;
-    }
-  </style>
 </head>
 
-<body>
-  <!-- 導覽列容器 -->
-  <div id="navbar-placeholder"></div>
+  <body>
+    <!-- 導覽列 -->
+    <div id="navbar-placeholder"></div>
 
-  <div class="container">
-    <h1>會員中心</h1>
-    <div class="profile-info" id="user-info">
-      <p>載入中...</p>
+    <div class="container member-container">
+      <!-- 側邊欄 -->
+      <div class="sidebar">
+        <h4>會員中心</h4>
+        <button class="tab-btn active" data-target="profile">個人資料</button>
+        <button class="tab-btn" data-target="mypet">我的寵物</button>
+        <button class="tab-btn" data-target="orders">我的訂單</button>
+        <button class="tab-btn" data-target="settings">帳號設定</button>
+      </div>
+
+      <!-- 右側主要內容 -->
+      <div class="content-area">
+        <!-- 個人資料 -->
+        <div id="profile" class="tab-content">
+          <h2>個人資料</h2>
+          <div id="user-info"><p>載入中...</p></div>
+        </div>
+
+        <!-- 我的寵物 -->
+        <div id="mypet" class="tab-content hidden">
+          <h2>我的寵物</h2>
+
+          <div class="pet-submenu mb-3">
+            <button class="btn pet-tab active" data-target="pet-info">寵物資料</button>
+            <button class="btn pet-tab" data-target="pet-vaccine">餵食紀錄</button>
+          </div>
+
+          <!-- 寵物資料 -->
+          <div id="pet-info" class="pet-tab-content">
+            <div id="pet-list"><p>載入中...</p></div>
+
+            <div id="new-pet-form" class="card p-3 mb-3">
+              <div class="mb-2">寵物姓名<input type="text" id="new-pet-name" class="form-control"></div>
+              <div class="mb-2">品種<input type="text" id="new-pet-species" class="form-control"></div>
+              <div class="mb-2">年齡<input type="number" id="new-pet-age" class="form-control"></div>
+              <div class="mb-2">生日<input type="date" id="new-pet-birthday" class="form-control"></div>
+              <div class="mb-2">上次疫苗施打日期<input type="date" id="new-pet-vaccine" class="form-control"></div>
+              <button class="btn btn-success" id="add-pet-btn">新增寵物</button>
+            </div>
+          </div>
+
+          <div id="pet-vaccine" class="pet-tab-content hidden">
+            <h3>餵食紀錄</h3>
+            <form id="feeding-form">
+              <div class="table-responsive">
+                <table class="table table-bordered">
+                  <thead>
+                    <tr>
+                      <th>餐別</th>
+                      <th>周一</th>
+                      <th>周二</th>
+                      <th>周三</th>
+                      <th>周四</th>
+                      <th>周五</th>
+                      <th>周六</th>
+                      <th>周日</th>
+                    </tr>
+                  </thead>
+                  <tbody id="feeding-tbody"><tr><td colspan="8">載入中...</td></tr></tbody>
+                </table>
+              </div>
+              <button type="submit" class="btn btn-primary mt-2">儲存餵食紀錄</button>
+              <div id="feeding-message" class="mt-2"></div>
+              <div id="last-update" class="mt-2"></div>
+            </form>
+          </div>
+
+        </div>
+
+        <!-- 我的訂單 -->
+        <div id="orders" class="tab-content hidden">
+          <h2>我的訂單</h2>
+          <div class="order-submenu mb-3">
+            <button class="btn order-tab active" data-target="active-orders">已預約的服務者</button>
+            <button class="btn order-tab" data-target="history-orders">歷史訂單</button>
+          </div>
+
+          <div id="active-orders" class="order-tab-content">
+            <div id="active-order-list" class="order-scroll">
+              <p>載入中...</p>
+            </div>
+          </div>
+
+          <div id="history-orders" class="order-tab-content hidden">
+            <div id="history-order-list" class="order-scroll"><p>載入中...</p></div>
+          </div>
+        </div>
+
+        <!-- 帳號設定 -->
+        <div id="settings" class="tab-content hidden">
+          <h2>帳號設定</h2>
+          <div id="actions">
+            <button class="btn btn-warning me-2" id="update-password-btn">修改密碼</button>
+            <button class="btn btn-danger" id="logout">登出</button>
+          </div>
+          <div id="message" class="message text-center mt-3"></div>
+        </div>
+      </div>
     </div>
-    <button class="logout-btn" id="logout-btn">登出</button>
-  </div>
+    <!-- JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="./js/navbar-loader.js" defer></script>
+    
+    <script src="./js/member.js"></script>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-      // 等待 navbar 載入完成（確保 supabaseClient 已初始化）
-      document.addEventListener("navbarLoaded", async () => {
-        const supabase = window.supabaseClient;
-        const userInfo = document.getElementById("user-info");
-        const logoutBtn = document.getElementById("logout-btn");
-
-        // 取得目前登入狀態
-        const {data: {session}} = await supabase.auth.getSession();
-
-        if (session && session.user) {
-          const {email, id} = session.user;
-          userInfo.innerHTML = `
-            <p><strong>使用者信箱：</strong> ${email}</p>
-            <p><strong>使用者 ID：</strong> ${id}</p>
-          `;
-          logoutBtn.style.display = "inline-block";
-        } else {
-          userInfo.innerHTML = `
-            <p>尚未登入，請先 <a href="login.html">登入</a>。</p>
-          `;
-          logoutBtn.style.display = "none";
-        }
-
-        // 登出事件
-        logoutBtn.addEventListener("click", async () => {
-          await supabase.auth.signOut();
-          window.location.href = "index.html";
-        });
-      });
-    });
-  </script>
-</body>
-
-</html>
+  </body>
+  </html>
