--- a/forgot-password.html
+++ b/forgot-password.html
@@ -4,26 +4,28 @@
 <head>
   <meta charset="UTF-8" />
   <title>忘記密碼 - 毛孩到府服務平台</title>
+  <link rel="icon" href="./img/icon.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/forgot-password.css">
 </head>
+
 <body>
   <nav id="navbar-placeholder"></nav>
   <main class="d-flex justify-content-center flex-column">
     <div>
-    <h1 class="text-center mymargin-1">忘記密碼</h1>
-    <div class="d-flex justify-content-center align-items-center flex-column">
-      <div id="message" class="text-center"></div>
-      <form id="forgot-form" class="d-flex flex-column gap-2 myform">
-        <input type="email" class="form-control" id="email" placeholder="請輸入您的電子郵件" required>
-        <button type="submit" class="btn btn-primary">
-          傳送重設密碼連結
-        </button>
-      </form>
+      <h1 class="text-center mymargin-1">忘記密碼</h1>
+      <div class="d-flex justify-content-center align-items-center flex-column">
+        <div id="message" class="text-center"></div>
+        <form id="forgot-form" class="d-flex flex-column gap-2 myform">
+          <input type="email" class="form-control" id="email" placeholder="請輸入您的電子郵件" required>
+          <button type="submit" class="btn btn-primary">
+            傳送重設密碼連結
+          </button>
+        </form>
+      </div>
     </div>
-  </div>
   </main>
 
   <footer class="fixed-bottom">
