--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>登入 - 毛孩到府服務平台</title>
+  <link rel="icon" href="./img/icon.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/login.css">
   <link rel="stylesheet" href="./css/style.css">
