--- a/reset-password.html
+++ b/reset-password.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>重設密碼 - 毛孩到府服務平台</title>
+  <link rel="icon" href="./img/icon.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
