--- a/reviews.html
+++ b/reviews.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>服務者評價系統 | 毛孩到府服務平台</title>
+  <link rel="icon" href="./img/icon.png" type="image/png">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/reviews.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
