--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>商店｜毛孩到府服務平台</title>
-
+  <link rel="icon" href="./img/icon.png" type="image/png">
   <!-- CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css">
