--- a/member.html
+++ b/member.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>會員中心｜毛孩到府服務平台</title>
+  <link rel="icon" href="./img/icon.png" type="image/png">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/member.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
@@ -117,8 +118,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="./js/navbar-loader.js" defer></script>
-    
+    <script src="./js/sweetalert-replacer.js"></script>
     <script src="./js/member.js"></script>
-
   </body>
   </html>
