鑷嫊閮ㄧ讲鏇存柊

--- a/login.html
+++ b/login.html
@@ -23,8 +23,7 @@
     </section>
 
     <!-- 登入表單 -->
-    <section>
-      <div class="login-card card">
+      <section class="login-card card">
         <h2 class="text-center">登入</h2>
         <div id="error-message" class="text-center text-danger mb-2" style="display: none;"></div>
         <form id="login-form">
@@ -36,8 +35,7 @@
           還沒有帳號？<a href="register.html">立即註冊</a><br />
           忘記密碼？<a href="forgot-password.html">重設密碼</a>
         </div>
-      </div>
-    </section>
+      </section>
   </main>
 
   <footer>
