--- a/navbar.html
+++ b/navbar.html
@@ -73,7 +73,7 @@
           <a class="nav-link" href="shop.html">商城</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="join_us.html">加入我們</a>
+          <a class="nav-link" href="contace_us.html">聯絡我們</a>
         </li>
         <li class="nav-item">
           <span id="auth-links" class="nav-link"></span>
