--- a/shop.html
+++ b/shop.html
@@ -15,18 +15,23 @@
 <body class="position-relative">
   <!-- Navbar -->
   <div id="navbar-placeholder"></div>
-<main class="padding"> 
-  <div class="container mymargin-1">
-    <h1 class="text-center mb-4">毛孩商品商店</h1>
-    <div id="product-list" class="row g-3"></div>
-  </div>
+  <main class="padding">
+    <div class="container mymargin-1">
+      <h1 class="text-center mb-4">毛孩商品商店</h1>
+      <div class="row mb-4 justify-content-center">
+        <div class="col-md-6">
+          <input type="text" id="search-input" class="form-control" placeholder="輸入商品名稱或描述進行搜尋..." aria-label="搜尋商品">
+        </div>
+      </div>
+      <div id="product-list" class="row g-3"></div>
+    </div>
 
-  <button class="myposition paybtn" id="pay">
-    結帳
-  </button>
-</main> 
+    <button class="myposition paybtn" id="pay">
+      結帳
+    </button>
+  </main>
   <!-- Footer -->
-  <footer >
+  <footer>
     <p>© 2025 毛孩到府服務平台 | 保留所有權利</p>
   </footer>
   <!-- JS -->
