--- a/navbar.html
+++ b/navbar.html
@@ -1,54 +1,6 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-<style>
-  /* 統一所有文字為白色 */
-  .navbar,
-  .navbar a,
-  .navbar span,
-  .navbar li {
-    color: #ffffff !important;
-  }
-
-  /* 統一連結樣式 */
-  .navbar .nav-link,
-  .navbar .login-btn {
-    color: #ffffff !important;
-    text-decoration: none;
-    transition: color 0.2s ease;
-  }
-
-  /* Hover 效果（微亮） */
-  .navbar .nav-link:hover,
-  .navbar .login-btn:hover {
-    color: #e0e0e0 !important;
-    text-decoration: none;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-  /* 目前頁面 (active 狀態) 的顏色 */
-  .navbar .nav-link.active {
-    color: #ffeb3b !important;
-    font-weight: 600;
-  }
-
-  /* 網站名稱（品牌）樣式 */
-  .navbar-brand {
-    color: #ffffff !important;
-    font-weight: 700;
-  }
-
-  .navbar-brand:hover {
-    color: #ffeb3b !important;
-  }
-  .app{
-      border: 1px #ffeb3b  solid;
-      padding: 10px;
-  }
-</style>
+<link rel="stylesheet" href="./css/navbar.css">
 
 <!-- Bootstrap Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top shadow-sm">
