--- a/navbar.html
+++ b/navbar.html
@@ -19,22 +19,22 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">首頁</a>
+          <a class="nav-link active w-100" aria-current="page" href="index.html">首頁</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="booking.html">服務項目</a>
+          <a class="nav-link w-100" href="booking.html">服務項目</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="reviews.html">評價系統</a>
+          <a class="nav-link w-100" href="reviews.html">評價系統</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="shop.html">商城</a>
+          <a class="nav-link w-100" href="shop.html">商城</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contace_us.html">聯絡我們</a>
+          <a class="nav-link w-100" href="contace_us.html">聯絡我們</a>
         </li>
-        <li class="nav-item">
-          <span id="auth-links"></span>
+        <li class="nav-item m-lg-0 ms-3">
+          <span id="auth-links" class="w-100"></span>
         </li>
       </ul>
     </div>
